--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ gunicorn==20.0.4
 Pillow==7.2.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+python-decouple==3.4
+python-dotenv==0.17.1
 pytz==2020.1
 sqlparse==0.3.1
 whitenoise==5.2.0
